# sippy

./: .clang-format  .cmake-format  CMakeLists.txt  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
parser/: literal.hpp  parser.hpp  variant.hpp
parser/grammar/: method.hpp  qi.hpp  sip_uri.hpp  version.hpp
parser/sip/: address.hpp  method.hpp  sip_uri.hpp  version.hpp
tests/: CMakeLists.txt
tests/parser/: CMakeLists.txt  test_method.cpp  test_parser_method.cpp  test_parser_sip_uri.cpp  test_parser_version.cpp  test_version.cpp
